Fix tabs going off-screen

--- a/admin/sass/core/_core.scss
+++ b/admin/sass/core/_core.scss
@@ -217,7 +217,7 @@ body{
             height: 69px;
             position: relative;
             padding: 0px;
-            min-width: 1250px;
+            min-width: 805px;
 
             ul {
                 list-style-type: none;
